samples/_failures_safe/1761438023_1bbb1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed81135e.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_ed81135e.c:179:9: error: expected expression at end of input
  179 |         parse_identifier(t,
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ed81135e.c:179:9: error: expected declaration or statement at end of input
